--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -36,13 +36,12 @@ jobs:
             target: i686-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-x64
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-zig
             build:
-              set -e && yarn build --target x86_64-unknown-linux-gnu && strip
-              *.node
+              set -e && yarn build --target x86_64-unknown-linux-gnu && strip *.node
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
-            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-alpine
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine-zig
             build: set -e && apk add perl openssl && yarn build && strip *.node
           - host: macos-latest
             target: aarch64-apple-darwin
@@ -51,7 +50,7 @@ jobs:
               strip -x *.node
           - host: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-aarch64
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-zig
             build:
               set -e && yarn build --target aarch64-unknown-linux-gnu &&
               aarch64-unknown-linux-gnu-strip *.node
@@ -75,7 +74,7 @@ jobs:
               ${ANDROID_NDK_LATEST_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip *.node
           - host: ubuntu-latest
             target: aarch64-unknown-linux-musl
-            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-alpine
+            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine-zig
             build:
               set -e && apk add perl openssl && rustup target add
               aarch64-unknown-linux-musl && yarn build --target
